force-app/main/default/objects/Grant_Solicitation__c/fields/Expose_Submit_a_New_Application_Tab__c.field-meta.xml
<CustomField>
    <fullName>Expose_Submit_a_New_Application_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Expose Submit a New Application tab to community.</description>
    <inlineHelpText>Expose Submit a New Application tab to community users who are under an Account with a Program Partnership with this program.</inlineHelpText>
    <label>Expose Submit a New Application Tab</label>
    <type>Checkbox</type>
</CustomField>