force-app/main/default/objects/Grant_Solicitation__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <inlineHelpText>The link in which proposers will be directed to upon clicking &apos;Apply Online&apos;</inlineHelpText>
    <label>External Link</label>
    <type>Url</type>
</CustomField>