force-app/main/default/objects/Grant_Solicitation__c/fields/External_NDA_Statement__c.field-meta.xml
<CustomField>
    <fullName>External_NDA_Statement__c</fullName>
    <description>Appears on the CORE_NYSERDA_NDA page</description>
    <inlineHelpText>Enter a custom NDA Statement here if you want to override the default NDA.</inlineHelpText>
    <label>External NDA Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>