force-app/main/default/objects/Grant_Solicitation__c/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <description>As per S-00998 beans story: New Construction family type to drive the incentive application flow.</description>
    <inlineHelpText>New Construction family type to drive the incentive application flow.</inlineHelpText>
    <label>Family Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Low Rise</fullName>
            </value>
            <value>
                <fullName>High Rise</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>HomeFree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>