force-app/main/default/objects/Grant_Solicitation__c/fields/Financial_Aide_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aide_s_Email__c</fullName>
    <description>Financial Aide&apos;s Email: Values here for each program will be pulled from NEIS and updated on a weekly basis.</description>
    <inlineHelpText>For High Volume cases : Please provide the designated email address for the program
For Low Volume cases : Please keep this blank. Salesforce will send the invoice to the financial aide assigned to the supplier in NEIS</inlineHelpText>
    <label>Financial Aide&apos;s Email</label>
    <type>Email</type>
</CustomField>