force-app/main/default/objects/Grant_Solicitation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <length>10</length>
    <type>Text</type>
</CustomField>