force-app/main/default/objects/Grant_Solicitation__c/fields/Header_Description__c.field-meta.xml
<CustomField>
    <fullName>Header_Description__c</fullName>
    <label>Header Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>