force-app/main/default/objects/Grant_Solicitation__c/fields/Hide_TaxId_and_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Hide_TaxId_and_DUNS_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide TaxId and DUNS Number</label>
    <type>Checkbox</type>
</CustomField>