force-app/main/default/objects/Grant_Solicitation__c/fields/Incentive_Factor__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Factor__c</fullName>
    <label>Incentive Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>