force-app/main/default/objects/Grant_Solicitation__c/fields/Incentive_Percent_for_Final_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Percent_for_Final_Invoice__c</fullName>
    <label>Incentive Percent for Final Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>