force-app/main/default/objects/Grant_Solicitation__c/fields/IncentiveFundingSrc_FieldSet_API_Name__c.field-meta.xml
<CustomField>
    <fullName>IncentiveFundingSrc_FieldSet_API_Name__c</fullName>
    <description>IncentiveFundingSrc FieldSet API Name</description>
    <inlineHelpText>Project Incentive Funding Source Field Set API Name</inlineHelpText>
    <label>IncentiveFundingSrc FieldSet API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>