force-app/main/default/objects/Grant_Solicitation__c/fields/Include_in_NEIS_Contract_Extract_Batch__c.field-meta.xml
<CustomField>
    <fullName>Include_in_NEIS_Contract_Extract_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include in NEIS Contract Extract Batch: Flag to indicate if Program Version should be included in NEIS Contract Extractor Batch. Batch will extract Contracts to send to NEIS for Programs.</description>
    <label>Include in NEIS Contract Extract Batch</label>
    <type>Checkbox</type>
</CustomField>