force-app/main/default/objects/Grant_Solicitation__c/fields/Include_in_NEIS_Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>Include_in_NEIS_Invoice_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include in NEIS Invoice Batch: Flag to indicate if Program Version should be included in NEIS Invoice Extractor Batch. Batch will extract invoices to send to NEIS for High volume Programs.</description>
    <label>Include in NEIS Invoice Batch</label>
    <type>Checkbox</type>
</CustomField>