force-app/main/default/objects/Grant_Solicitation__c/fields/Initial_Submission_Message__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submission_Message__c</fullName>
    <label>Initial Submission Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>