force-app/main/default/objects/Grant_Solicitation__c/fields/Installed_MW__c.field-meta.xml
<CustomField>
    <fullName>Installed_MW__c</fullName>
    <label>Installed MW</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>