force-app/main/default/objects/Grant_Solicitation__c/fields/Inv_Disti_Line_FieldSet_API_Name_for_CSV__c.field-meta.xml
<CustomField>
    <fullName>Inv_Disti_Line_FieldSet_API_Name_for_CSV__c</fullName>
    <description>Invoice Distribution Line FieldSet API Name for CSV</description>
    <inlineHelpText>Invoice Distribution Line FieldSet API Name for CSV</inlineHelpText>
    <label>Inv Disti Line FieldSet API Name for CSV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>