force-app/main/default/objects/Grant_Solicitation__c/fields/Inverter_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inverter Manufacturer</label>
    <type>Checkbox</type>
</CustomField>