force-app/main/default/objects/Grant_Solicitation__c/fields/Invoice_Line_FieldSet_API_Name_for_CSV__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_FieldSet_API_Name_for_CSV__c</fullName>
    <description>Invoice Line FieldSet API Name for CSV</description>
    <label>Invoice Line FieldSet API Name for CSV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>