force-app/main/default/objects/Grant_Solicitation__c/fields/Invoice_Page__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Page__c</fullName>
    <description>Choose the Invoice Page that projects in this program should use. Leave blank if there is special logic that drives the page.</description>
    <inlineHelpText>Choose the Invoice Page that projects in this program should use. Leave blank if there is special logic that drives the page.</inlineHelpText>
    <label>Invoice Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEEP_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>CORE_GENERIC_PAYMENT_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>CORE_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>CORE_MILESTONE_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>CT_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>NC_MILESTONE_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>ZEV_INVOICE_PAGE</fullName>
            </value>
            <value>
                <fullName>Core_PaymentRequest_Page</fullName>
            </value>
            <value>
                <fullName>WFD_TM_Invoice_Page</fullName>
            </value>
            <value>
                <fullName>NYSUN_Invoice_Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>