force-app/main/default/objects/Grant_Solicitation__c/fields/Invoice_Statement__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Statement__c</fullName>
    <label>Invoice Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>