force-app/main/default/objects/Grant_Solicitation__c/fields/Invoice_Summary_Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Summary_Email_Template_API_Name__c</fullName>
    <defaultValue>&quot;CORE_Email_Invoices_to_NEIS_for_Low_Volume_Programs&quot;</defaultValue>
    <description>Invoice Summary Email Template API Name</description>
    <label>Invoice Summary Email Template API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>