force-app/main/default/objects/Grant_Solicitation__c/fields/Invoice_Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Validation_Type__c</fullName>
    <label>Invoice Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>