force-app/main/default/objects/Grant_Solicitation__c/fields/Is_Apex_Context__c.field-meta.xml
<CustomField>
    <fullName>Is_Apex_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <description>T-02179</description>
    <label>Is Apex Context</label>
    <type>Checkbox</type>
</CustomField>