force-app/main/default/objects/Grant_Solicitation__c/fields/IsConcept_Paper_Threshold__c.field-meta.xml
<CustomField>
    <fullName>IsConcept_Paper_Threshold__c</fullName>
    <description>T-02462: Rollup all validations onto Solicitation level</description>
    <formula>NOT(ISBLANK(Concept_Paper_Pass_Score__c))</formula>
    <label>Concept Paper Threshold?</label>
    <type>Checkbox</type>
</CustomField>