force-app/main/default/objects/Grant_Solicitation__c/fields/IsProposal_Threshold__c.field-meta.xml
<CustomField>
    <fullName>IsProposal_Threshold__c</fullName>
    <description>T-02462: Rollup all validations onto Solicitation level</description>
    <formula>NOT(ISBLANK(Proposal_Threshold__c))</formula>
    <label>Proposal Threshold?</label>
    <type>Checkbox</type>
</CustomField>