force-app/main/default/objects/Grant_Solicitation__c/fields/IsScoring_Rubric_Present__c.field-meta.xml
<CustomField>
    <fullName>IsScoring_Rubric_Present__c</fullName>
    <description>T-02653/T-02462: Rollup all validations onto Solicitation level</description>
    <formula>NOT(ISBLANK(Scoring_Rubric_Attachment_Id__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring Rubric?</label>
    <type>Checkbox</type>
</CustomField>