force-app/main/default/objects/Grant_Solicitation__c/fields/Legacy_Electrical_Offset_Limit__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Electrical_Offset_Limit__c</fullName>
    <description>Legacy Electrical Offset Limit: NY Sun Application should check this field for all migrated projects to identify the limit for electrical offset. This is applicable in Change Modification only.</description>
    <label>Legacy Electrical Offset Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>