force-app/main/default/objects/Grant_Solicitation__c/fields/Long_Solicitation_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Solicitation_Name__c</fullName>
    <label>Long Solicitation Name</label>
    <type>TextArea</type>
</CustomField>