force-app/main/default/objects/Grant_Solicitation__c/fields/Manage_Contacts_Button__c.field-meta.xml
<CustomField>
    <fullName>Manage_Contacts_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Show &quot;Manage Contacts Button&quot; on Generic Sites page</description>
    <label>Manage Contacts Button</label>
    <type>Checkbox</type>
</CustomField>