force-app/main/default/objects/Grant_Solicitation__c/fields/Mandatory_Roles__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Roles__c</fullName>
    <label>Mandatory Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Site Owner</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Authorized Representative</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Designated Agent</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Driller</fullName>
            </value>
            <value>
                <fullName>Government Official</fullName>
            </value>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
            <value>
                <fullName>NYSERDA Project Co-ordinator</fullName>
            </value>
            <value>
                <fullName>NYSERDA Project Manager</fullName>
            </value>
            <value>
                <fullName>Primary Energy Consultant</fullName>
            </value>
            <value>
                <fullName>Project Sponsor</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Proposer</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Reporting Contact</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Sub Contracting Energy Consultant</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>System Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>