force-app/main/default/objects/Grant_Solicitation__c/fields/Mandatory_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Site_Type__c</fullName>
    <label>Mandatory Site Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>