force-app/main/default/objects/Grant_Solicitation__c/fields/Manual_Submission_Only__c.field-meta.xml
<CustomField>
    <fullName>Manual_Submission_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to hide the &apos;Apply Online&apos; link on the Funding Opportunity detail page.</inlineHelpText>
    <label>Manual Submission Only?</label>
    <type>Checkbox</type>
</CustomField>