force-app/main/default/objects/Grant_Solicitation__c/fields/Maximum_Sites_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sites_Allowed__c</fullName>
    <description>It is used in Generic pages implementation to allow user for maximum number of sites on Site Page</description>
    <label>Maximum Sites Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>