force-app/main/default/objects/Grant_Solicitation__c/fields/Measures_captured_at__c.field-meta.xml
<CustomField>
    <fullName>Measures_captured_at__c</fullName>
    <description>Pick the object that that measures will be related to. The default, if left blank, is to the Project_Site.</description>
    <inlineHelpText>Pick the object that that measures will be related to. The default, if left blank, is to the Project_Site.</inlineHelpText>
    <label>Measures captured at</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>