force-app/main/default/objects/Grant_Solicitation__c/fields/Minimum_Total_gross_site_sq_footage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Total_gross_site_sq_footage__c</fullName>
    <label>Minimum Total gross site sq footage</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>