force-app/main/default/objects/Grant_Solicitation__c/fields/MW_Limit__c.field-meta.xml
<CustomField>
    <fullName>MW_Limit__c</fullName>
    <label>MW Limit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>