force-app/main/default/objects/Grant_Solicitation__c/fields/MWBE__c.field-meta.xml
<CustomField>
    <fullName>MWBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Minority &amp; Women-Owned Business Enterprise (MWBE)</description>
    <inlineHelpText>Check this box if this solicitation has Minority &amp; Women-Owned Business Enterprise (MWBE) Goals.If it does, also find the corresponding checklist question in the Program Contents section and set it to Active.</inlineHelpText>
    <label>MWBE Goals?</label>
    <type>Checkbox</type>
</CustomField>