force-app/main/default/objects/Grant_Solicitation__c/fields/NDA_Statement__c.field-meta.xml
<CustomField>
    <fullName>NDA_Statement__c</fullName>
    <label>NDA Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>