force-app/main/default/objects/Grant_Solicitation__c/fields/NEIS_Contracts_Batch_CSV_File_Name__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Contracts_Batch_CSV_File_Name__c</fullName>
    <description>S-00403: NEIS Contracts Batch CSV File Name</description>
    <inlineHelpText>NEIS Contracts Batch CSV File Name (excluding extension) e.g. NY Sun Residential/Small Commercial - 2016 Contacts</inlineHelpText>
    <label>NEIS Contracts Batch CSV File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>