force-app/main/default/objects/Grant_Solicitation__c/fields/NEIS_Invoice_Batch_CSV_File_Name__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Invoice_Batch_CSV_File_Name__c</fullName>
    <description>NEIS Invoice Batch CSV File Name (excluding extension)</description>
    <inlineHelpText>NEIS Invoice Batch CSV File Name (excluding extension) e.g. NY Sun Residential/Small Commercial - 2016 Invoices</inlineHelpText>
    <label>NEIS Invoice Batch CSV File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>