force-app/main/default/objects/Grant_Solicitation__c/fields/NEIS_Invoice_Summary_Message__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Invoice_Summary_Message__c</fullName>
    <description>NEIS Invoice Summary Message: Text to be printed on NEIS Invoice Summary PDF.</description>
    <label>NEIS Invoice Summary Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>