force-app/main/default/objects/Grant_Solicitation__c/fields/NEIS_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Project_Id__c</fullName>
    <label>NEIS Project Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>