force-app/main/default/objects/Grant_Solicitation__c/fields/Notification_Concept_Paper_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Concept_Paper_Due_Date__c</fullName>
    <description>S-01055 - Read values for notification.</description>
    <formula>Solicitation_Round_for_Notification__r.Concept_Paper_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification: Concept Paper Due Date</label>
    <type>DateTime</type>
</CustomField>