force-app/main/default/objects/Grant_Solicitation__c/fields/Notification_Scoring_Committee_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Scoring_Committee_Date__c</fullName>
    <description>S-01055 - Read values for notification.</description>
    <formula>Solicitation_Round_for_Notification__r.Scoring_Committee_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification: Scoring Committee Date</label>
    <type>Date</type>
</CustomField>