force-app/main/default/objects/Grant_Solicitation__c/fields/Notify_Aft_Announcement_Dt_Review_Team__c.field-meta.xml
<CustomField>
    <fullName>Notify_Aft_Announcement_Dt_Review_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00724</description>
    <label>Notify Aft Announcement Dt - Review Team</label>
    <type>Checkbox</type>
</CustomField>