force-app/main/default/objects/Grant_Solicitation__c/fields/Notify_Solicitation_Manager_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Notify_Solicitation_Manager_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00724: Single email for solicitation manager when pending review is updated.</description>
    <label>Notify Solicitation Manager - Proposal</label>
    <type>Checkbox</type>
</CustomField>