force-app/main/default/objects/Grant_Solicitation__c/fields/Number_of_Open_Solicitation_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Solicitation_Rounds__c</fullName>
    <description>T-02462/T-02793: Rollup all validations onto Solicitation level</description>
    <formula>Total_Open_Solicitation_Rounds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Open Solicitation Rounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>