force-app/main/default/objects/Grant_Solicitation__c/fields/NY_Green_Bank_RFP__c.field-meta.xml
<CustomField>
    <fullName>NY_Green_Bank_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the solicitation is a NY Green Bank RFP. This will change the user interface for the proposer.</inlineHelpText>
    <label>NY Green Bank RFP</label>
    <type>Checkbox</type>
</CustomField>