force-app/main/default/objects/Grant_Solicitation__c/fields/NYSERDA_Submission_Email__c.field-meta.xml
<CustomField>
    <fullName>NYSERDA_Submission_Email__c</fullName>
    <description>S-00781: i) Field to track the Green back specific emails for submission notifications. ii) Ability to add multiple emails that will be notified upon all proposal submission.</description>
    <inlineHelpText>Email address(es) to be notified on proposal submission. In case of multiple emails enter them by separating with comma.</inlineHelpText>
    <label>NYSERDA Submission Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>