force-app/main/default/objects/Grant_Solicitation__c/fields/Open_Solicitation_Round__c.field-meta.xml
<CustomField>
    <fullName>Open_Solicitation_Round__c</fullName>
    <description>T-02462: Rollup all validations onto Solicitation level</description>
    <formula>Total_Open_Solicitation_Rounds__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Solicitation Round?</label>
    <type>Checkbox</type>
</CustomField>