force-app/main/default/objects/Grant_Solicitation__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>00011455: permanent solution to having Service Provider RFP&apos;s go to the correct NYGB page. Solicitation API</description>
    <inlineHelpText>Green Bank specific field in Salesforce that allows them to specify which of the two pages the solicitation should be published to.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investment Opportunities</fullName>
            </value>
            <value>
                <fullName>Service Provider Opportunities</fullName>
            </value>
            <value>
                <fullName>Other Opportunities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>