force-app/main/default/objects/Grant_Solicitation__c/fields/Panel_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Panel_Manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panel Manufacturer</label>
    <type>Checkbox</type>
</CustomField>