force-app/main/default/objects/Grant_Solicitation__c/fields/Portal_User_Limit__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Limit__c</fullName>
    <label>Portal User Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>