force-app/main/default/objects/Grant_Solicitation__c/fields/Primary_Supporting_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supporting_Technologies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Supporting Technologies</label>
    <type>Checkbox</type>
</CustomField>